// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu-bar-item all matches snapshot 1`] = `
<button
  aria-label=""
  class="item item-all active"
  type="button"
>
  <div
    class="unread-indicator"
  />
   
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
</button>
`;

exports[`menu-bar-item create matches snapshot 1`] = `
<button
  aria-label=""
  class="item item-create"
  type="button"
>
  <div
    class="unread-indicator"
  />
   
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
</button>
`;

exports[`menu-bar-item people matches snapshot 1`] = `
<button
  aria-label="people"
  class="item item-people"
  type="button"
>
  <div
    class="unread-indicator has-unreads"
  />
   
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
</button>
`;

exports[`menu-bar-item search matches snapshot 1`] = `
<button
  aria-label=""
  class="item item-search"
  type="button"
>
  <div
    class="unread-indicator"
  />
   
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
</button>
`;

exports[`menu-bar-item toggle matches snapshot 1`] = `
<button
  aria-label=""
  class="item item-toggle"
  type="button"
>
  <div
    class="unread-indicator"
  />
   
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
</button>
`;

exports[`menu-bar-item when all state, all item has highlight matches snapshot 1`] = `
<button
  aria-label="all"
  class="item item-all active"
  type="button"
>
  <div
    class="unread-indicator has-mentions"
  />
   
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
</button>
`;
